Fix z-index issue

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -25,7 +25,7 @@
     background: rgba(255, 255, 255, .5);
     left: 100%;
     top: 0;
-    z-index: 1;
+    z-index: 2;
 }
 
 .slider-container:after {
